--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/wysiwyg/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/wysiwyg/HTML_WYSIWYG.mxml
@@ -128,6 +128,9 @@
 			
 			public function insertTemplate (templateName : String) : void
 			{
+				if (!templateName)
+					return;
+				
 				var template : String = "#Template(" + templateName + ")";
 				
 				setElement(template);
