--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplateContentEditor.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/TemplateContentEditor.mxml
@@ -50,7 +50,7 @@
 		]]>
 	</mx:Script>
 	
-	<mx:TextInput id="textInputField"
+	<mx:TextArea id="textInputField"
 				  width="100%" height="100%"
 				  text="{startContent}"
 				  keyDown="textInputField_keyDownHandler(event)"/>
