refresh content (templates/pages) on rename template
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8259 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/SyncPagesSelector.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/components/SyncPagesSelector.mxml
@@ -8,7 +8,7 @@
 			import mx.events.TreeEvent;
 			
 			import net.vdombox.helpeditor.controller.events.PagesSyncronizationEvent;
-			import net.vdombox.helpeditor.model.SQLProxy;
+			import net.vdombox.helpeditor.model.proxy.SQLProxy;
 			import net.vdombox.helpeditor.view.itemrenderers.TreeItemRenderer;
 			
 			public var syncGroupName : String;
