--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/Products.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/Products.mxml
@@ -21,7 +21,7 @@
 	<mx:Script>
 		<![CDATA[
 			import net.vdombox.helpeditor.controller.ProjectsUpdater;
-			import net.vdombox.helpeditor.model.SQLProxy;
+			import net.vdombox.helpeditor.model.proxy.SQLProxy;
 			import net.vdombox.helpeditor.model.AlertMessages;
 			import flash.utils.setTimeout;
 			
