--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -62,8 +62,9 @@
 			import net.vdombox.helpeditor.controller.PageToc;
 			import net.vdombox.helpeditor.controller.ProductXMLCreator;
 			import net.vdombox.helpeditor.controller.SpinnerPopUpManager;
+			import net.vdombox.helpeditor.controller.events.TemplateRenameEvent;
 			import net.vdombox.helpeditor.model.AlertMessages;
-			import net.vdombox.helpeditor.model.SQLProxy;
+			import net.vdombox.helpeditor.model.proxy.SQLProxy;
 			import net.vdombox.helpeditor.model.vo.TemplateVO;
 			import net.vdombox.helpeditor.utils.PageUtils;
 			import net.vdombox.helpeditor.utils.ResourceUtils;
@@ -706,7 +707,7 @@
 				if ( html_wysiwyg )
 					sourseTxt = html_wysiwyg.getHTML(true);
 				
-				sourseTxt = PageUtils.getInstance().replacePageTemplates(sourseTxt);
+				sourseTxt = PageUtils.getInstance().replaceTemplatesLinksByTemplateContent(sourseTxt);
 				
 				content.writeMultiByte(sourseTxt, "utf-8");
 
@@ -842,7 +843,8 @@
 				var templatesPanel : Templates = new Templates();
 				templatesPanel.allowInsert = allowInsert;
 				
-				templatesPanel.addEventListener("insertClick", insertTemplateHandler);
+				templatesPanel.addEventListener(Templates.EVENT_INSERT_TEMPLATE_CLICK, insertTemplateHandler);
+				templatesPanel.addEventListener(TemplateRenameEvent.TEMPLATE_RENAMED, templateRenamedHandler, true);
 								
 				PopUpManager.addPopUp(templatesPanel, this, true);
 				
@@ -851,6 +853,21 @@
 					var templateName : String = templatesPanel.selectedTemplateName;
 					
 					html_wysiwyg.insertTemplate(templateName);
+				}
+				
+				function templateRenamedHandler (event:TemplateRenameEvent) : void
+				{
+					var curPageContent : String = html_wysiwyg.getHTML(true);
+					
+					if (!event.oldTemplateName)
+						return;
+					
+					if (curPageContent.indexOf(event.oldTemplateName) < 0)
+						return;
+					
+					curPageContent = PageUtils.getInstance().renameTemplateInPage(curPageContent, event.oldTemplateName, event.newTemplateName);
+					
+					html_wysiwyg.setHTML(curPageContent);
 				}
 			}
 			
@@ -1032,9 +1049,6 @@
 				<mx:Canvas width="100%" height="100%" label="Preview" show="{htmlShowHandler()}">
 					<mx:HTML id="html" width="100%" height="100%" />
 				</mx:Canvas>
-				<!--mx:Canvas width="100%" height="100%" label="Sourse" color="#00FF00" >
-				<mx:TextArea id="htmlSource" width="100%" height="100%"  focusAlpha="0" />
-				</mx:Canvas-->
 			</mx:TabNavigator>
 		</mx:HDividedBox>
 		<mx:HBox horizontalAlign="right" width="100%">
