--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/AddProduct.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/AddProduct.mxml
@@ -21,7 +21,7 @@
 	<mx:Script>
 		<![CDATA[
 			import net.vdombox.helpeditor.view.components.wysiwyg.HTML_WYSIWYG;
-			import net.vdombox.helpeditor.model.SQLProxy;
+			import net.vdombox.helpeditor.model.proxy.SQLProxy;
 			import mx.collections.ArrayCollection;
 			import mx.controls.CheckBox;
 			import mx.controls.Label;
