--- a/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/SyncronizePages.mxml
+++ b/Help/Editor/v.01/src/net/vdombox/helpeditor/view/panel/SyncronizePages.mxml
@@ -40,7 +40,7 @@
 			import net.vdombox.helpeditor.controller.events.PagesSyncronizationEvent;
 			import net.vdombox.helpeditor.model.AlertMessages;
 			import net.vdombox.helpeditor.model.proxy.SQLProxy;
-			import net.vdombox.helpeditor.view.itemrenderers.TreeItemRenderer;
+			import net.vdombox.helpeditor.view.itemrenderers.CheckBoxesTreeItemRenderer;
 			
 			private var sqlProxy : SQLProxy = new SQLProxy();
 			
@@ -158,7 +158,7 @@
 			
 			private function groupPagesChangeHandler (event : PagesSyncronizationEvent) : void
 			{
-				var pageItemRenderer : TreeItemRenderer = event.target as TreeItemRenderer;
+				var pageItemRenderer : CheckBoxesTreeItemRenderer = event.target as CheckBoxesTreeItemRenderer;
 				
 				if (!currentPagesSelector)
 					return;
