Create new object to doubleClick on icon on panel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8263 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
@@ -5,7 +5,8 @@
 				
 				focusEnabled="false" xmlns:view="net.vdombox.ide.common.view.*"
 				minHeight="22"
-				click="itemrenderer1_clickHandler(event)">
+				click="itemrenderer1_clickHandler(event)"
+				doubleClickEnabled="true" doubleClick="itemrenderer1_doubleClickHandler(event)">
 	
 	<fx:Script>
 		<![CDATA[
@@ -36,6 +37,11 @@
 			protected function itemrenderer1_clickHandler(event:MouseEvent):void
 			{
 				dispatchEvent( new EventsPanelEvent ( EventsPanelEvent.RENDERER_CLICK ) );
+			}
+			
+			protected function itemrenderer1_doubleClickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new EventsPanelEvent ( EventsPanelEvent.RENDERER_DOUBLE_CLICK ) );
 			}
 			
 		]]>
